--- a/Black.Zinc.Spitz.Api/Black.Zinc.Spitz.Api.csproj
+++ b/Black.Zinc.Spitz.Api/Black.Zinc.Spitz.Api.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Project_Wild_Trombone.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Project-Wild-Trombone.Domain\Project-Wild-Trombone.Domain.csproj" />
+    <ProjectReference Include="..\Black.Zinc.Spitz.Domain\Black.Zinc.Spitz.Domain.csproj" />
   </ItemGroup>
 
 </Project>
