lab 6 adding authn and authz

--- a/Black.Zinc.Spitz.Api/appsettings.json
+++ b/Black.Zinc.Spitz.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Auth0": {
+    "Authority": "https://dev-56mtzw3b5fe712el.us.auth0.com/",
+    "Audience": "https://black-zinc-spitz"
+  }
 }
